--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     implementation 'androidx.test:core:1.2.0'
     implementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
